--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 node_modules
-.next
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.development
+.env.test
+.env.production
+.env
+.next/
+.vscode/
