--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
+    "recharts": "^2.15.3",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.3.3",
     "zod": "^3.22.4",
